--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.17.4
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
+  flutter_svg: ^2.0.10
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +69,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/backgrounds/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
