--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     }
     
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.4.0' // o la que estés usando
-        classpath 'com.google.gms:google-services:4.4.0' // 👈 esta es la que falla si no hay repos
+        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
