mod0005 - Se actualiza la versión de Flutter para correr los tests correctamente en CI

--- a/.github/workflows/flutter_tests.yml
+++ b/.github/workflows/flutter_tests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Configurar Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.19.5"  # Ajusta a la versión que uses localmente
+          flutter-version: "3.32.4"
 
       - name: Instalar dependencias
         run: flutter pub get
