--- a/.github/workflows/flutter_tests.yml
+++ b/.github/workflows/flutter_tests.yml
@@ -22,9 +22,8 @@ jobs:
       - name: Instalar dependencias
         run: flutter pub get
 
-      - name: Ejecutar unit tests
-      # run: flutter test
-        run: flutter test integration_test
+      - name: Run unit tests
+        run: flutter test
 
       # Descomenta esta sección si querés correr también los tests de integración
       # Tené en cuenta que tests de integración que dependan de dispositivos físicos o emuladores
