mod0006 - Se agrega el soporte web para la aplicación. Ya se probó de agregar un nuevo cliente desde la página Web

--- a/firebase.json
+++ b/firebase.json
@@ -1,72 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "valen-market-admin-prod",
-          "appId": "1:952141122398:android:02df23fe1d62d5113c5dcf",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "valen-market-admin",
-          "configurations": {
-            "android": "1:162105456449:android:a338b6f1c0f040e4b8d3c0",
-            "ios": "1:162105456449:ios:ed2f36fb3d9c93beb8d3c0",
-            "macos": "1:162105456449:ios:ed2f36fb3d9c93beb8d3c0",
-            "web": "1:162105456449:web:bceabe33fecf0c74b8d3c0",
-            "windows": "1:162105456449:web:029b4d1a9594c396b8d3c0"
-          }
-        },
-        "lib/config/firebase_options_dev.dart": {
-          "projectId": "valen-market-admin-dev",
-          "configurations": {
-            "android": "1:1089321285838:android:6386cecda183fc3926389f"
-          }
-        },
-        "lib/config/firebase_options_prod.dart": {
-          "projectId": "valen-market-admin-prod",
-          "configurations": {
-            "android": "1:952141122398:android:02df23fe1d62d5113c5dcf"
-          }
-        }
-      }
-    }
-  },
-  "firestore": {
-    "database": "(default)",
-    "location": "nam5",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "firestore": {
-      "port": 8080
-    },
-    "ui": {
-      "enabled": true
-    },
-    "singleProjectMode": true
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"valen-market-admin-dev","appId":"1:1089321285838:android:31b196cef630300426389f","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"valen-market-admin-dev","configurations":{"android":"1:1089321285838:android:31b196cef630300426389f","web":"1:1089321285838:web:e22ce681d5e0e8bc26389f"}}}}}}
