--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignorar claves de cuenta de servicio
+lib/secrets/*.json
+
+# Ignorar script de despliegue web a Firebase Hosting
+deploy_web.bat
