--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.19.0
   google_sign_in: ^6.1.6
   url_launcher: ^6.2.6
+  shared_preferences: ^2.2.2
+  shared_preferences_web: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
