--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   url_launcher: ^6.2.6
   shared_preferences: ^2.2.2
   shared_preferences_web: ^2.0.5
+  flutter_secure_storage: ^9.2.2
+  oauth2: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
