--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences_web: ^2.0.5
   flutter_secure_storage: ^9.2.2
   oauth2: ^2.0.3
+  web: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
