--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   oauth2: ^2.0.3
   web: ^1.1.1
+  flutter_riverpod: ^2.4.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
