--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # Localización (necesario para idioma español en widgets del sistema)
+  flutter_localizations:
+    sdk: flutter
+  
+  # Firebase
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   cloud_firestore: ^5.5.0
+
+  # Utilidades y servicios
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
   flutter_svg: ^2.0.10
   googleapis: ^11.0.0
   googleapis_auth: ^1.4.0
   http: ^1.1.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   google_sign_in: ^6.1.6
   url_launcher: ^6.2.6
   shared_preferences: ^2.2.2
@@ -48,6 +56,7 @@ dependencies:
   oauth2: ^2.0.3
   web: ^1.1.1
   flutter_riverpod: ^2.4.0
+
 
 
 
