--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0' # o la versión que uses en tu proyecto
+          flutter-version: '3.54.0'
 
       - name: Get dependencies
         run: flutter pub get
