--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,40 +36,37 @@ dependencies:
     sdk: flutter
   
   # Firebase
-  firebase_core: ^3.14.0
-  firebase_auth: ^5.6.0
-  cloud_firestore: ^5.5.0
+  firebase_core: ">=3.14.0 <4.0.0"
+  firebase_auth: ">=5.6.0 <6.0.0"
+  cloud_firestore: ">=5.5.0 <6.0.0"
 
   # Utilidades y servicios
-  flutter_dotenv: ^5.1.0
-  provider: ^6.1.2
-  flutter_svg: ^2.0.10
-  googleapis: ^11.0.0
-  googleapis_auth: ^1.4.0
-  http: ^1.1.0
-  intl: ^0.20.2
-  google_sign_in: ^6.1.6
-  url_launcher: ^6.2.6
-  shared_preferences: ^2.2.2
-  shared_preferences_web: ^2.0.5
-  flutter_secure_storage: ^9.2.2
-  oauth2: ^2.0.3
-  web: ^1.1.1
-  flutter_riverpod: ^2.4.0
-
-
-
+  flutter_dotenv: ">=5.1.0 <6.0.0"
+  provider: ">=6.1.2 <7.0.0"
+  flutter_svg: ">=2.0.10 <3.0.0"
+  googleapis: ">=11.0.0 <12.0.0"
+  googleapis_auth: ">=1.4.0 <2.0.0"
+  http: ">=1.1.0 <2.0.0"
+  intl: ">=0.20.0 <0.21.0"
+  google_sign_in: ">=6.1.6 <7.0.0"
+  url_launcher: ">=6.2.6 <7.0.0"
+  shared_preferences: ">=2.2.2 <3.0.0"
+  shared_preferences_web: ">=2.0.5 <3.0.0"
+  flutter_secure_storage: ">=9.2.2 <10.0.0"
+  oauth2: ">=2.0.3 <3.0.0"
+  web: ">=1.1.1 <2.0.0"
+  flutter_riverpod: ">=2.4.0 <3.0.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ">=1.0.8 <2.0.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  mockito: ^5.4.4
+  mockito: ">=5.4.4 <6.0.0"
   build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -77,7 +74,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^6.0.0
+  flutter_lints: ">=3.0.0 <6.0.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
