--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,1 @@
-{
-  "hosting": {
-    "site": "valen-market-admin-dev",
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"hosting":{"site":"valen-market-admin-dev","public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]},"flutter":{"platforms":{"android":{"default":{"projectId":"valen-market-admin-prod","appId":"1:952141122398:android:02df23fe1d62d5113c5dcf","fileOutput":"android/app/google-services.json"}},"dart":{"lib/config/firebase_options_prod.dart":{"projectId":"valen-market-admin-prod","configurations":{"android":"1:952141122398:android:02df23fe1d62d5113c5dcf","web":"1:952141122398:web:f04f0ebf4e24022d3c5dcf"}}}}}}
