mod0016 - De cambia el flujo para desplegar el ambiente de desarrollo cuando se manden cambios a la rama de developmentWeb y el ambiente productivo cuando se manden cambios a Master. El ambiente de desarrollo ya se encuentra funcional, pero resta terminar de configrar el productivo

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -1,19 +1,13 @@
-name: Deploy Flutter Web to Firebase Hosting on PR
+name: Deploy Flutter Web (Dev / Prod)
 
 on:
-  pull_request:
+  push:
     branches:
       - developWeb
       - master
 
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
-
 jobs:
-  build_and_preview:
-    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,17 +17,27 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'  # Última versión estable en octubre 2025
+          # Última versión estable en octubre 2025
+          flutter-version: '3.24.3'
 
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Build Flutter Web (Production)
-        run: flutter build web --release -t lib/main_prod.dart
+      - name: Build Flutter Web
+        run: |
+          if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+            flutter build web --release -t lib/main_prod.dart
+          else
+            flutter build web --release -t lib/main_dev.dart
+          fi
 
-      - name: Deploy to Firebase Hosting (Preview Channel)
+      - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_DEV }}
-          projectId: valen-market-admin-dev
+          firebaseServiceAccount: ${{ 
+            github.ref == 'refs/heads/master' && 
+            secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_PROD || 
+            secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_DEV 
+          }}
+          projectId: ${{ github.ref == 'refs/heads/master' && 'valen-market-admin-prod' || 'valen-market-admin-dev' }}
