mod0016 - Se actualiza el Workflow para evitar errores de sintaxis y se agrega el proyecto de Producción a firebaserc

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "valen-market-admin-dev"
+    "dev": "valen-market-admin-dev",
+    "prod": "valen-market-admin-prod"
   }
 }
