--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      # 🔹 Build específico según la rama
+      # 🔹 Build según rama
       - name: Build Flutter Web
         run: |
           if [[ "${GITHUB_REF##*/}" == "master" ]]; then
@@ -33,24 +33,11 @@ jobs:
             flutter build web --release -t lib/main_dev.dart
           fi
 
-      # 🔹 Configurar Firebase CLI
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      # 🔹 Despliegue Condicional según la rama
+      # 🔹 Deploy a Firebase Hosting (usando acción oficial)
       - name: Deploy to Firebase Hosting
-        env:
-          FIREBASE_SERVICE_ACCOUNT_DEV: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_DEV }}
-          FIREBASE_SERVICE_ACCOUNT_PROD: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_PROD }}
-        run: |
-          if [[ "${GITHUB_REF##*/}" == "master" ]]; then
-            echo "Deploying to PRODUCTION..."
-            echo "$FIREBASE_SERVICE_ACCOUNT_PROD" > ${HOME}/firebase-key.json
-            firebase use valen-market-admin-prod --add
-            firebase deploy --only hosting:valen-market-admin-prod --token "$(firebase login:ci --no-localhost)" --project valen-market-admin-prod --non-interactive
-          else
-            echo "Deploying to DEVELOPMENT..."
-            echo "$FIREBASE_SERVICE_ACCOUNT_DEV" > ${HOME}/firebase-key.json
-            firebase use valen-market-admin-dev --add
-            firebase deploy --only hosting:valen-market-admin-dev --token "$(firebase login:ci --no-localhost)" --project valen-market-admin-dev --non-interactive
-          fi
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ github.ref == 'refs/heads/master' && secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_PROD || secrets.FIREBASE_SERVICE_ACCOUNT_VALEN_MARKET_ADMIN_DEV }}
+          projectId: ${{ github.ref == 'refs/heads/master' && 'valen-market-admin-prod' || 'valen-market-admin-dev' }}
+          channelId: live
