mod0016 - Se corrige el flujo del Workflow, luego de probar los despligues manualmente en ambos ambientes

--- a/.firebaserc
+++ b/.firebaserc
@@ -2,5 +2,22 @@
   "projects": {
     "dev": "valen-market-admin-dev",
     "prod": "valen-market-admin-prod"
-  }
+  },
+  "targets": {
+    "valen-market-admin-dev": {
+      "hosting": {
+        "dev": [
+          "valen-market-admin-dev"
+        ]
+      }
+    },
+    "valen-market-admin-prod": {
+      "hosting": {
+        "prod": [
+          "valen-market-admin-prod"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
