--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,28 @@
-{"hosting": [{"site": "valen-market-admin-dev","public": "build/web","ignore": ["firebase.json", "**/.*", "**/node_modules/**"],"rewrites": [{ "source": "**", "destination": "/index.html" }]},{"site": "valen-market-admin-prod","public": "build/web","ignore": ["firebase.json", "**/.*", "**/node_modules/**"],"rewrites": [{ "source": "**", "destination": "/index.html" }]}]}
+{
+  "hosting": [
+    {
+      "target": "dev",
+      "public": "build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        { "source": "**", "destination": "/index.html" }
+      ]
+    },
+    {
+      "target": "prod",
+      "public": "build/web",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        { "source": "**", "destination": "/index.html" }
+      ]
+    }
+  ]
+}
