mod0018 - Se optimiza la instalación y dependencias de Flutter en GitHub Actions mediante el cache, para que las ejecuciones sean más eficientes y eviten repetir puntos que no cambia

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -22,6 +22,19 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
+          channel: 'stable'
+          cache: true   # Se activa el cache del SDK de Flutter, para no reinstalar todas las veces
+
+      # Se activa también el cache de dependencias para optimizar las ejecuciones
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            .dart_tool
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
 
       - name: Get dependencies
         run: flutter pub get
